--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/driver_splash_activity.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/driver_splash_activity.xml
@@ -55,7 +55,7 @@
             android:layout_marginStart="40dp"
             android:layout_marginEnd="40dp"
             style="@style/ButtonTheme"
-            android:text="Grant Permission"
+            android:text="@string/grant_permission"
             />
 
     </LinearLayout>
