--- a/JugnooNewDriver/jugnooNewDriver/src/hitch/res/values/values-wl.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/hitch/res/values/values-wl.xml
@@ -42,8 +42,8 @@
 
     <drawable name="bg_splash">@drawable/bg_hitch</drawable>
     <drawable name="bg_login">@drawable/bg_hitch</drawable>
-    <dimen name="ic_splash_logo_width">150dp</dimen>
-    <dimen name="ic_splash_logo_height">150dp</dimen>
+    <dimen name="ic_splash_logo_width">170dp</dimen>
+    <dimen name="ic_splash_logo_height">170dp</dimen>
 
 
 
@@ -64,4 +64,5 @@
     <integer name="visibility_faq">@integer/view_visible</integer>
     <integer name="visibility_driver_agreement">@integer/view_visible</integer>
     <integer name="path_filter_distance">65</integer>
+    <integer name="visibility_earning_bank_deposit">@integer/view_gone</integer>
 </resources>
