--- a/JugnooNewDriver/jugnooNewDriver/src/nickelride/res/values/values-wl.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/nickelride/res/values/values-wl.xml
@@ -100,6 +100,9 @@
     <color name="themeColor">#3A3A3A</color>
     <color name="themeColorLight">#bb3A3A3A</color>
 
+    <!--Color for graph-->
+    <color name="driverEarningHighLisghtColor">#bb3a9eff</color>
+
     <color name="colorPrimary">#FFFFFF</color>
     <color name="colorPrimaryDark">#3A3A3A</color>
     <color name="textColorTitle">#000000</color>
