--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_wallet_transaction.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_wallet_transaction.xml
@@ -2,7 +2,7 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
@@ -11,6 +11,7 @@
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recyclerView"
+            android:layout_below="@id/topRl"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scrollbars="vertical"
@@ -19,8 +20,8 @@
 
         <TextView
             android:id="@+id/textViewNoItems"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:text="@string/no_transactions"
             android:textColor="@color/text_color"
@@ -29,5 +30,5 @@
             android:visibility="gone"
             />
 
-    </LinearLayout>
+    </RelativeLayout>
 </layout>
