--- a/JugnooNewDriver/jugnooNewDriver/src/hitch/res/values/values-wl.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/hitch/res/values/values-wl.xml
@@ -67,4 +67,5 @@
     <integer name="visibility_earning_bank_deposit">@integer/view_gone</integer>
     <integer name="apply_default_country_code">1</integer>
     <string name="default_country_code">+1</string>
+    <integer name="show_total_fare_at_ride_end">1</integer>
 </resources>
