f_wallet_transaction_fixes: some fixes of currency precision

--- a/JugnooNewDriver/jugnooNewDriver/src/kardi/res/values/values-wl.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/kardi/res/values/values-wl.xml
@@ -16,7 +16,7 @@
     -->
 
     <string name="appname">Kardi</string>
-    <string name="app_name">Kardi Driver</string>
+    <string name="app_name">Kardi Partner</string>
 
     <!--White Label Key-->
     <string name="white_label_key">3d83f508c28f09ef4ef0c5aaf0d6c636</string>
