--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_profile_screen.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_profile_screen.xml
@@ -382,6 +382,10 @@
             card_view:cardUseCompatPadding="true"
             android:tag="@string/dont_touch_me"
             >
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
         <android.support.v7.widget.SwitchCompat
             android:id="@+id/switchNavigation"
             android:layout_width="match_parent"
@@ -394,6 +398,19 @@
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
             />
+                <android.support.v7.widget.SwitchCompat
+            android:id="@+id/switchMaxSound"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            style="@style/TextLarge"
+            android:text="@string/ringtone_full_volume"
+            android:theme="@style/ThemeSwitch"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            />
+            </LinearLayout>
 
         </android.support.v7.widget.CardView>
 
