--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_end.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_end.xml
@@ -375,6 +375,7 @@
                         android:gravity="center"
                         android:paddingStart="40px"
                         android:paddingEnd="40px"
+                        android:visibility="@integer/visibility_take_cash_at_ride_end"
                         />
 
             </LinearLayout>
