--- a/JugnooNewDriver/jugnooNewDriver/src/livecabs/res/values/values-wl.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/livecabs/res/values/values-wl.xml
@@ -52,7 +52,6 @@
     <drawable name="ic_splash_logo_drawable">@drawable/ic_splash_logo</drawable> <!--400 * 400 px MAX--> <!--* IMP-->
     <integer name="show_t_and_c">@integer/view_visible</integer>
     <drawable name="bg_splash">@null</drawable>
-    <drawable name="windowBackgroundColor">@drawable/app_start_bg</drawable>
 
 
     <!--Side Menu Properties-->
@@ -74,6 +73,37 @@
     <integer name="show_language_control">@integer/view_gone</integer>
     <integer name="show_call_in_otp">@integer/view_visible</integer>
 
+
+    <!--new-->
+    <bool name="disable_register">false</bool>
+
+    <color name="driverEarningHighLisghtColor">@color/colorPrimary</color>
+    <integer name="driver_logout_enabled">1</integer>
+    <integer name="show_driver_timer">@integer/view_invisible</integer>
+
+    <drawable name="windowBackgroundColor">@null</drawable>
+    <bool name="specified_country_search_result_enabled">false</bool>
+
+    <integer name="splash_scene_top_bg_visibility">@integer/view_gone</integer>
+    <integer name="splash_scene_bottom_bg_visibility">@integer/view_gone</integer>
+    <integer name="login_scene_top_bg_visibility">@integer/view_gone</integer>
+    <integer name="login_scene_bottom_bg_visibility">@integer/view_gone</integer>
+    <color name="colorDark">@color/text_color</color>
+    <color name="colorLight">@color/text_color</color>
+
+    <color name="themeColor">#221E20</color>
+    <color name="themeColorLight">#221E20</color>
+
+    <color name="colorPrimary">#FFFFFF</color>
+    <color name="colorPrimaryDark">#3A3A3A</color>
+    <color name="textColorTitle">#000000</color>
+    <color name="textColor">#000000</color>
+    <color name="textColorMedium">#333333</color>
+    <color name="textColorLight">#9b9b9b</color>
+    <color name="textColorButton">#FFFFFF</color>
+    <color name="dividerColor">#dbdbdb</color>
+    <color name="themeColorAlternate">#3c3638</color>
+    <color name="themeColorAlternateLight">#bb3c3638</color>
 
 
 
