--- a/JugnooNewDriver/jugnooNewDriver/src/livecabs/res/values/values-wl.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/livecabs/res/values/values-wl.xml
@@ -105,6 +105,7 @@
     <color name="themeColorAlternate">#3c3638</color>
     <color name="themeColorAlternateLight">#bb3c3638</color>
 
+    <string name="currency_fallback">LKR</string>
 
 
 </resources>
