--- a/JugnooNewDriver/jugnooNewDriver/src/kardi/res/values/values-wl.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/kardi/res/values/values-wl.xml
@@ -116,5 +116,6 @@
 
     <integer name="visibility_payment_type_in_wallet_trans">@integer/view_gone</integer>
     <string name="currency_fallback">SGD</string>
+    <integer name="default_show_details_in_take_cash">1</integer>
 
 </resources>
