--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_engaged.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_engaged.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    android:id="@+id/driverEngagedLayout"
+<RelativeLayout android:id="@+id/driverEngagedLayout"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_below="@+id/topRlOuter"
     android:splitMotionEvents="false"
-    android:visibility="visible">
+    android:visibility="visible"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <!-- customer info layout -->
     <RelativeLayout
@@ -841,7 +841,46 @@
                         android:visibility="visible"/>
                 </RelativeLayout>
 
-            </LinearLayout>
+                <RelativeLayout
+                    android:id="@+id/layout_added_luggage"
+                    android:visibility="gone"
+                    android:tag="@string/dont_touch_me"
+                    android:background="@color/grey_black"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:id="@+id/tvLuggageInfo"
+                        android:paddingStart="20dp"
+                        android:layout_alignParentStart="true"
+                        tools:text="Tip Added: $2"
+                        android:layout_marginEnd="5dp"
+                        android:maxLines="1"
+                        android:ellipsize="end"
+                        style="@style/TextNormal"
+                        android:layout_toStartOf="@id/tvChangeLuggageCount"
+                        android:layout_centerVertical="true"
+                        android:textColor="@android:color/white"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+
+                    <TextView
+                        android:id="@+id/tvChangeLuggageCount"
+                        android:paddingTop="10dp"
+                        android:paddingBottom="10dp"
+                        android:paddingStart="20dp"
+                        android:paddingEnd="20dp"
+                        style="@style/TextNormal"
+                        android:layout_alignParentEnd="true"
+                        android:clickable="true"
+                        android:focusable="true"
+                        android:text="@string/change_u"
+                        android:textColor="@android:color/white"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+
+                </RelativeLayout>
+            </LinearLayout >
         </LinearLayout>
 
     </LinearLayout>
