--- a/JugnooNewDriver/jugnooNewDriver/src/hezz/res/values/values-wl.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/hezz/res/values/values-wl.xml
@@ -70,7 +70,7 @@
     <integer name="show_language_control">@integer/view_gone</integer>
     <integer name="show_call_in_otp">@integer/view_visible</integer>
     <string name="facebook_page_id">1497119970363540</string>
-    <string name="facebook_page_name">Hezzmaroc</string>
+    <string name="facebook_page_url">https://www.facebook.com/Hezzmaroc</string>
     <integer name="like_us_on_fb_enabled">@integer/view_visible</integer>
 
     <color name="themeColor">#CF312F</color>
