--- a/JugnooNewDriver/jugnooNewDriver/src/smartride/res/values/values-wl.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/smartride/res/values/values-wl.xml
@@ -29,7 +29,7 @@
     <string name="google_maps_api_key">AIzaSyC0LUM94aPlHwPRQaUd3wp0b4wZn4xMbmo</string> <!--IMP-->
 
     <string name="facebook_page_id">214323992611315</string>
-    <string name="facebook_page_name">smartridetaxi</string>
+    <string name="facebook_page_url">https://www.facebook.com/smartridetaxi</string>
 
     <!--App Level Constants-->
     <drawable name="app_icon">@mipmap/ic_launcher</drawable><!--* IMP-->
