--- a/JugnooNewDriver/jugnooNewDriver/src/white/res/values/values-wl.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/white/res/values/values-wl.xml
@@ -25,7 +25,7 @@
     <string name="hippo_support_faq_name_default">Driver</string>
 
     <string name="facebook_page_id">252184564966458</string>
-    <string name="facebook_page_name">jugnoose</string>
+    <string name="facebook_page_url">https://www.facebook.com/jugnoose</string>
 
 
     <!--App Level Constants-->
